# TimerResolution

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  timer_helpers.c  timer_helpers.h
